Web scrapper using Lex and Yacc/Scrapper/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CLOSEABBR
    GARBAGE
    OPENABBR
    OPENPOINTTABLE

Grammar

Rule 0     S' -> start
Rule 1     start -> before OPENFINAL skip SEPARATOR handlematches CLOSEFINAL
Rule 2     handlematches -> skip OPENTABLE OPENROW OPENHEADER OPENHREF CONTENT CLOSEHREF CONTENT CLOSEHEADER OPENHEADER OPENHREF CONTENT CLOSEHREF CLOSEHEADER OPENHEADER CONTENT OPENHREF CONTENT CLOSEHREF CLOSEHEADER CLOSEROW OPENROW OPENDATA handlescorer CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA handlescorer CLOSEDATA CLOSEROW CLOSEPOINTTABLE FRIGHTDIV handledetails SEPARATOR handlematches
Rule 3     handlematches -> OPENMATCHDIV skip OPENTABLE OPENROW OPENHEADER OPENHREF CONTENT CLOSEHREF CONTENT CLOSEHEADER OPENHEADER OPENHREF CONTENT CLOSEHREF CLOSEHEADER OPENHEADER CONTENT OPENHREF CONTENT CLOSEHREF CLOSEHEADER CLOSEROW OPENROW OPENDATA handlescorer CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA handlescorer CLOSEDATA CLOSEROW CLOSEPOINTTABLE FRIGHTDIV handledetails SEPARATOR handlematches
Rule 4     handlematches -> OPENMATCHDIV skip OPENTABLE OPENROW OPENHEADER OPENHREF CONTENT CLOSEHREF CONTENT CLOSEHEADER OPENHEADER OPENHREF CONTENT CLOSEHREF CLOSEHEADER OPENHEADER CONTENT OPENHREF CONTENT CLOSEHREF CLOSEHEADER CLOSEROW OPENROW OPENDATA handlescorer CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA handlescorer CLOSEDATA CLOSEROW CLOSEPOINTTABLE FRIGHTDIV handledetails
Rule 5     handlematches -> skip OPENTABLE OPENROW OPENHEADER OPENHREF CONTENT CLOSEHREF CONTENT CLOSEHEADER OPENHEADER OPENHREF CONTENT CLOSEHREF skip CLOSEHEADER OPENHEADER CONTENT OPENHREF CONTENT CLOSEHREF CLOSEHEADER CLOSEROW OPENROW OPENDATA handlescorer CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA handlescorer CLOSEDATA CLOSEROW OPENROW OPENHEADER OPENHREF CONTENT CLOSEHREF CLOSEHEADER CLOSEROW OPENROW OPENDATA handlescorer CLOSEDATA OPENHEADER CONTENT CLOSEHEADER OPENDATA handlepenscorer CLOSEDATA CLOSEROW CLOSEPOINTTABLE FRIGHTDIV handledetails SEPARATOR handlematches
Rule 6     handlematches -> OPENMATCHDIV skip OPENTABLE OPENROW OPENHEADER OPENHREF CONTENT CLOSEHREF CONTENT CLOSEHEADER OPENHEADER OPENHREF CONTENT CLOSEHREF skip CLOSEHEADER OPENHEADER CONTENT OPENHREF CONTENT CLOSEHREF CLOSEHEADER CLOSEROW OPENROW OPENDATA handlescorer CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA handlescorer CLOSEDATA CLOSEROW OPENROW OPENHEADER OPENHREF CONTENT CLOSEHREF CLOSEHEADER CLOSEROW OPENROW OPENDATA handlescorer CLOSEDATA OPENHEADER CONTENT CLOSEHEADER OPENDATA handlepenscorer CLOSEDATA CLOSEROW CLOSEPOINTTABLE FRIGHTDIV handledetails SEPARATOR handlematches
Rule 7     handlematches -> OPENMATCHDIV skip OPENTABLE OPENROW OPENHEADER OPENHREF CONTENT CLOSEHREF CONTENT CLOSEHEADER OPENHEADER OPENHREF CONTENT CLOSEHREF skip CLOSEHEADER OPENHEADER CONTENT OPENHREF CONTENT CLOSEHREF CLOSEHEADER CLOSEROW OPENROW OPENDATA handlescorer CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA handlescorer CLOSEDATA CLOSEROW OPENROW OPENHEADER OPENHREF CONTENT CLOSEHREF CLOSEHEADER CLOSEROW OPENROW OPENDATA handlescorer CLOSEDATA OPENHEADER CONTENT CLOSEHEADER OPENDATA handlepenscorer CLOSEDATA CLOSEROW CLOSEPOINTTABLE FRIGHTDIV handledetails
Rule 8     handlematches -> <empty>
Rule 9     handlescorer -> skip OPENLIST OPENHREF CONTENT CLOSEHREF skip CLOSELIST handlescorer
Rule 10    handlescorer -> <empty>
Rule 11    handlepenscorer -> skip OPENLIST CONTENT OPENHREF CONTENT CLOSEHREF skip CLOSELIST handlepenscorer
Rule 12    handlepenscorer -> <empty>
Rule 13    handledetails -> OPENHREF CONTENT CLOSEHREF CONTENT OPENHREF CONTENT CLOSEHREF CONTENT CONTENT OPENHREF CONTENT CLOSEHREF skip
Rule 14    before -> CONTENT before
Rule 15    before -> OPENHREF before
Rule 16    before -> CLOSEHREF before
Rule 17    before -> OPENHEADER before
Rule 18    before -> CLOSEHEADER before
Rule 19    before -> OPENDATA before
Rule 20    before -> CLOSEDATA before
Rule 21    before -> OPENROW before
Rule 22    before -> CLOSEROW before
Rule 23    before -> OPENLIST before
Rule 24    before -> CLOSELIST before
Rule 25    before -> OPENTABLE before
Rule 26    before -> OPENLINK before
Rule 27    before -> CLOSEPOINTTABLE before
Rule 28    before -> OPENMATCHDIV before
Rule 29    before -> FRIGHTDIV before
Rule 30    before -> SEPARATOR before
Rule 31    before -> <empty>
Rule 32    skip -> CONTENT skip
Rule 33    skip -> OPENHREF skip
Rule 34    skip -> CLOSEHREF skip
Rule 35    skip -> <empty>

Terminals, with rules where they appear

CLOSEABBR            : 
CLOSEDATA            : 2 2 2 3 3 3 4 4 4 5 5 5 5 5 6 6 6 6 6 7 7 7 7 7 20
CLOSEFINAL           : 1
CLOSEHEADER          : 2 2 2 3 3 3 4 4 4 5 5 5 5 5 6 6 6 6 6 7 7 7 7 7 18
CLOSEHREF            : 2 2 2 3 3 3 4 4 4 5 5 5 5 6 6 6 6 7 7 7 7 9 11 13 13 13 16 34
CLOSELIST            : 9 11 24
CLOSEPOINTTABLE      : 2 3 4 5 6 7 27
CLOSEROW             : 2 2 3 3 4 4 5 5 5 5 6 6 6 6 7 7 7 7 22
CONTENT              : 2 2 2 2 2 3 3 3 3 3 4 4 4 4 4 5 5 5 5 5 5 5 6 6 6 6 6 6 6 7 7 7 7 7 7 7 9 11 11 13 13 13 13 13 13 14 32
FRIGHTDIV            : 2 3 4 5 6 7 29
GARBAGE              : 
OPENABBR             : 
OPENDATA             : 2 2 2 3 3 3 4 4 4 5 5 5 5 5 6 6 6 6 6 7 7 7 7 7 19
OPENFINAL            : 1
OPENHEADER           : 2 2 2 3 3 3 4 4 4 5 5 5 5 5 6 6 6 6 6 7 7 7 7 7 17
OPENHREF             : 2 2 2 3 3 3 4 4 4 5 5 5 5 6 6 6 6 7 7 7 7 9 11 13 13 13 15 33
OPENLINK             : 26
OPENLIST             : 9 11 23
OPENMATCHDIV         : 3 4 6 7 28
OPENPOINTTABLE       : 
OPENROW              : 2 2 3 3 4 4 5 5 5 5 6 6 6 6 7 7 7 7 21
OPENTABLE            : 2 3 4 5 6 7 25
SEPARATOR            : 1 2 3 5 6 30
error                : 

Nonterminals, with rules where they appear

before               : 1 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
handledetails        : 2 3 4 5 6 7
handlematches        : 1 2 3 5 6
handlepenscorer      : 5 6 7 11
handlescorer         : 2 2 3 3 4 4 5 5 5 6 6 6 7 7 7 9
skip                 : 1 2 2 3 3 4 4 5 5 5 6 6 6 7 7 7 9 9 11 11 13 32 33 34
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . before OPENFINAL skip SEPARATOR handlematches CLOSEFINAL
    (14) before -> . CONTENT before
    (15) before -> . OPENHREF before
    (16) before -> . CLOSEHREF before
    (17) before -> . OPENHEADER before
    (18) before -> . CLOSEHEADER before
    (19) before -> . OPENDATA before
    (20) before -> . CLOSEDATA before
    (21) before -> . OPENROW before
    (22) before -> . CLOSEROW before
    (23) before -> . OPENLIST before
    (24) before -> . CLOSELIST before
    (25) before -> . OPENTABLE before
    (26) before -> . OPENLINK before
    (27) before -> . CLOSEPOINTTABLE before
    (28) before -> . OPENMATCHDIV before
    (29) before -> . FRIGHTDIV before
    (30) before -> . SEPARATOR before
    (31) before -> .

    CONTENT         shift and go to state 4
    OPENHREF        shift and go to state 5
    CLOSEHREF       shift and go to state 6
    OPENHEADER      shift and go to state 7
    CLOSEHEADER     shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENLIST        shift and go to state 13
    CLOSELIST       shift and go to state 14
    OPENTABLE       shift and go to state 15
    OPENLINK        shift and go to state 16
    CLOSEPOINTTABLE shift and go to state 17
    OPENMATCHDIV    shift and go to state 18
    FRIGHTDIV       shift and go to state 19
    SEPARATOR       shift and go to state 3
    OPENFINAL       reduce using rule 31 (before -> .)

    start                          shift and go to state 1
    before                         shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> before . OPENFINAL skip SEPARATOR handlematches CLOSEFINAL

    OPENFINAL       shift and go to state 20


state 3

    (30) before -> SEPARATOR . before
    (14) before -> . CONTENT before
    (15) before -> . OPENHREF before
    (16) before -> . CLOSEHREF before
    (17) before -> . OPENHEADER before
    (18) before -> . CLOSEHEADER before
    (19) before -> . OPENDATA before
    (20) before -> . CLOSEDATA before
    (21) before -> . OPENROW before
    (22) before -> . CLOSEROW before
    (23) before -> . OPENLIST before
    (24) before -> . CLOSELIST before
    (25) before -> . OPENTABLE before
    (26) before -> . OPENLINK before
    (27) before -> . CLOSEPOINTTABLE before
    (28) before -> . OPENMATCHDIV before
    (29) before -> . FRIGHTDIV before
    (30) before -> . SEPARATOR before
    (31) before -> .

    CONTENT         shift and go to state 4
    OPENHREF        shift and go to state 5
    CLOSEHREF       shift and go to state 6
    OPENHEADER      shift and go to state 7
    CLOSEHEADER     shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENLIST        shift and go to state 13
    CLOSELIST       shift and go to state 14
    OPENTABLE       shift and go to state 15
    OPENLINK        shift and go to state 16
    CLOSEPOINTTABLE shift and go to state 17
    OPENMATCHDIV    shift and go to state 18
    FRIGHTDIV       shift and go to state 19
    SEPARATOR       shift and go to state 3
    OPENFINAL       reduce using rule 31 (before -> .)

    before                         shift and go to state 21

state 4

    (14) before -> CONTENT . before
    (14) before -> . CONTENT before
    (15) before -> . OPENHREF before
    (16) before -> . CLOSEHREF before
    (17) before -> . OPENHEADER before
    (18) before -> . CLOSEHEADER before
    (19) before -> . OPENDATA before
    (20) before -> . CLOSEDATA before
    (21) before -> . OPENROW before
    (22) before -> . CLOSEROW before
    (23) before -> . OPENLIST before
    (24) before -> . CLOSELIST before
    (25) before -> . OPENTABLE before
    (26) before -> . OPENLINK before
    (27) before -> . CLOSEPOINTTABLE before
    (28) before -> . OPENMATCHDIV before
    (29) before -> . FRIGHTDIV before
    (30) before -> . SEPARATOR before
    (31) before -> .

    CONTENT         shift and go to state 4
    OPENHREF        shift and go to state 5
    CLOSEHREF       shift and go to state 6
    OPENHEADER      shift and go to state 7
    CLOSEHEADER     shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENLIST        shift and go to state 13
    CLOSELIST       shift and go to state 14
    OPENTABLE       shift and go to state 15
    OPENLINK        shift and go to state 16
    CLOSEPOINTTABLE shift and go to state 17
    OPENMATCHDIV    shift and go to state 18
    FRIGHTDIV       shift and go to state 19
    SEPARATOR       shift and go to state 3
    OPENFINAL       reduce using rule 31 (before -> .)

    before                         shift and go to state 22

state 5

    (15) before -> OPENHREF . before
    (14) before -> . CONTENT before
    (15) before -> . OPENHREF before
    (16) before -> . CLOSEHREF before
    (17) before -> . OPENHEADER before
    (18) before -> . CLOSEHEADER before
    (19) before -> . OPENDATA before
    (20) before -> . CLOSEDATA before
    (21) before -> . OPENROW before
    (22) before -> . CLOSEROW before
    (23) before -> . OPENLIST before
    (24) before -> . CLOSELIST before
    (25) before -> . OPENTABLE before
    (26) before -> . OPENLINK before
    (27) before -> . CLOSEPOINTTABLE before
    (28) before -> . OPENMATCHDIV before
    (29) before -> . FRIGHTDIV before
    (30) before -> . SEPARATOR before
    (31) before -> .

    CONTENT         shift and go to state 4
    OPENHREF        shift and go to state 5
    CLOSEHREF       shift and go to state 6
    OPENHEADER      shift and go to state 7
    CLOSEHEADER     shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENLIST        shift and go to state 13
    CLOSELIST       shift and go to state 14
    OPENTABLE       shift and go to state 15
    OPENLINK        shift and go to state 16
    CLOSEPOINTTABLE shift and go to state 17
    OPENMATCHDIV    shift and go to state 18
    FRIGHTDIV       shift and go to state 19
    SEPARATOR       shift and go to state 3
    OPENFINAL       reduce using rule 31 (before -> .)

    before                         shift and go to state 23

state 6

    (16) before -> CLOSEHREF . before
    (14) before -> . CONTENT before
    (15) before -> . OPENHREF before
    (16) before -> . CLOSEHREF before
    (17) before -> . OPENHEADER before
    (18) before -> . CLOSEHEADER before
    (19) before -> . OPENDATA before
    (20) before -> . CLOSEDATA before
    (21) before -> . OPENROW before
    (22) before -> . CLOSEROW before
    (23) before -> . OPENLIST before
    (24) before -> . CLOSELIST before
    (25) before -> . OPENTABLE before
    (26) before -> . OPENLINK before
    (27) before -> . CLOSEPOINTTABLE before
    (28) before -> . OPENMATCHDIV before
    (29) before -> . FRIGHTDIV before
    (30) before -> . SEPARATOR before
    (31) before -> .

    CONTENT         shift and go to state 4
    OPENHREF        shift and go to state 5
    CLOSEHREF       shift and go to state 6
    OPENHEADER      shift and go to state 7
    CLOSEHEADER     shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENLIST        shift and go to state 13
    CLOSELIST       shift and go to state 14
    OPENTABLE       shift and go to state 15
    OPENLINK        shift and go to state 16
    CLOSEPOINTTABLE shift and go to state 17
    OPENMATCHDIV    shift and go to state 18
    FRIGHTDIV       shift and go to state 19
    SEPARATOR       shift and go to state 3
    OPENFINAL       reduce using rule 31 (before -> .)

    before                         shift and go to state 24

state 7

    (17) before -> OPENHEADER . before
    (14) before -> . CONTENT before
    (15) before -> . OPENHREF before
    (16) before -> . CLOSEHREF before
    (17) before -> . OPENHEADER before
    (18) before -> . CLOSEHEADER before
    (19) before -> . OPENDATA before
    (20) before -> . CLOSEDATA before
    (21) before -> . OPENROW before
    (22) before -> . CLOSEROW before
    (23) before -> . OPENLIST before
    (24) before -> . CLOSELIST before
    (25) before -> . OPENTABLE before
    (26) before -> . OPENLINK before
    (27) before -> . CLOSEPOINTTABLE before
    (28) before -> . OPENMATCHDIV before
    (29) before -> . FRIGHTDIV before
    (30) before -> . SEPARATOR before
    (31) before -> .

    CONTENT         shift and go to state 4
    OPENHREF        shift and go to state 5
    CLOSEHREF       shift and go to state 6
    OPENHEADER      shift and go to state 7
    CLOSEHEADER     shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENLIST        shift and go to state 13
    CLOSELIST       shift and go to state 14
    OPENTABLE       shift and go to state 15
    OPENLINK        shift and go to state 16
    CLOSEPOINTTABLE shift and go to state 17
    OPENMATCHDIV    shift and go to state 18
    FRIGHTDIV       shift and go to state 19
    SEPARATOR       shift and go to state 3
    OPENFINAL       reduce using rule 31 (before -> .)

    before                         shift and go to state 25

state 8

    (18) before -> CLOSEHEADER . before
    (14) before -> . CONTENT before
    (15) before -> . OPENHREF before
    (16) before -> . CLOSEHREF before
    (17) before -> . OPENHEADER before
    (18) before -> . CLOSEHEADER before
    (19) before -> . OPENDATA before
    (20) before -> . CLOSEDATA before
    (21) before -> . OPENROW before
    (22) before -> . CLOSEROW before
    (23) before -> . OPENLIST before
    (24) before -> . CLOSELIST before
    (25) before -> . OPENTABLE before
    (26) before -> . OPENLINK before
    (27) before -> . CLOSEPOINTTABLE before
    (28) before -> . OPENMATCHDIV before
    (29) before -> . FRIGHTDIV before
    (30) before -> . SEPARATOR before
    (31) before -> .

    CONTENT         shift and go to state 4
    OPENHREF        shift and go to state 5
    CLOSEHREF       shift and go to state 6
    OPENHEADER      shift and go to state 7
    CLOSEHEADER     shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENLIST        shift and go to state 13
    CLOSELIST       shift and go to state 14
    OPENTABLE       shift and go to state 15
    OPENLINK        shift and go to state 16
    CLOSEPOINTTABLE shift and go to state 17
    OPENMATCHDIV    shift and go to state 18
    FRIGHTDIV       shift and go to state 19
    SEPARATOR       shift and go to state 3
    OPENFINAL       reduce using rule 31 (before -> .)

    before                         shift and go to state 26

state 9

    (19) before -> OPENDATA . before
    (14) before -> . CONTENT before
    (15) before -> . OPENHREF before
    (16) before -> . CLOSEHREF before
    (17) before -> . OPENHEADER before
    (18) before -> . CLOSEHEADER before
    (19) before -> . OPENDATA before
    (20) before -> . CLOSEDATA before
    (21) before -> . OPENROW before
    (22) before -> . CLOSEROW before
    (23) before -> . OPENLIST before
    (24) before -> . CLOSELIST before
    (25) before -> . OPENTABLE before
    (26) before -> . OPENLINK before
    (27) before -> . CLOSEPOINTTABLE before
    (28) before -> . OPENMATCHDIV before
    (29) before -> . FRIGHTDIV before
    (30) before -> . SEPARATOR before
    (31) before -> .

    CONTENT         shift and go to state 4
    OPENHREF        shift and go to state 5
    CLOSEHREF       shift and go to state 6
    OPENHEADER      shift and go to state 7
    CLOSEHEADER     shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENROW         shift and go to state 11
    CLOSEROW        shift and go to state 12
    OPENLIST        shift and go to state 13
    CLOSELIST       shift and go to state 14
    OPENTABLE       shift and go to state 15
    OPENLINK        shift and go to state 16
    CLOSEPOINTTABLE shift and go to state 17
    OPENMATCHDIV    shift and go to state 18
    FRIGHTDIV       shift and go to state 19
    SEPARATOR       shift and go to state 3
    OPENFINAL       reduce using rule 31 (before -> .)

    before                         shift and go to state 27

state 10

    (20) before -> CLOSEDATA . before
    (14) before -> . CONTENT before
    (15) before -> . OPENHREF before
    (16) before -> . CLOSEHREF before
    (17) before -> . OPENHEADER before
    (18) before -> . CLOSEHEADER before
    (19) before -> . OPENDATA before
    (20) before -> . CLOSEDATA before
    (21) before -> . OPENROW before
    (22) before -> . CLOSEROW before
    (23) before -> . OPENLIST before
    (24) before -> . CLOSELIST before
    (25) before -> . OPENTABLE before
    (26) before -> . OPENLINK before
    (27) before -> . CLOSEPOINTTABLE before
    (28) before -> . OPENMATCHDIV before
    (29) before -> . FRIGHTDIV before
    (30) before -> . SEPARATOR before
    (31) before -> .
